src/objects/Partner_Function__c.object
<CustomObject>
    <description>Partner Functions of a Customer</description>
    <fields>
        <fullName>FunLoc_Number__c</fullName>
        <description>FunLoc Number</description>
        <formula>FunLoc__r.FunLoc_Number_Text__c</formula>
        <inlineHelpText>FunLoc Number</inlineHelpText>
        <label>FunLoc Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunLoc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Functions   ( Relation between a  Customer and a FunLoc )</description>
        <inlineHelpText>Partner Functions   ( Relation between a  Customer and a FunLoc )</inlineHelpText>
        <label>FunLoc</label>
        <referenceTo>FunLoc__c</referenceTo>
        <relationshipLabel>Partner Functions</relationshipLabel>
        <relationshipName>Partner_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Function_Type__c</fullName>
        <description>Partner Function Type</description>
        <inlineHelpText>Partner Function Type</inlineHelpText>
        <label>Partner Function Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RE - BillTo Party</fullName>
                </value>
                <value>
                    <fullName>RG - Payer</fullName>
                </value>
                <value>
                    <fullName>WE - ShipTo Party</fullName>
                </value>
                <value>
                    <fullName>AG - SoldTo Party</fullName>
                </value>
                <value>
                    <fullName>ZA - Customer Service Rep</fullName>
                </value>
                <value>
                    <fullName>ZC - CSW: SP of end-customer</fullName>
                </value>
                <value>
                    <fullName>ZD - CSW: SH of end-customer</fullName>
                </value>
                <value>
                    <fullName>ZI - Intermediate consignee</fullName>
                </value>
                <value>
                    <fullName>ZS - Sales Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Name__c</fullName>
        <description>Person Name</description>
        <inlineHelpText>Person Name</inlineHelpText>
        <label>Person Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Partner_Function_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AP001 - STEVEN ZHOU</fullName>
                </value>
                <value>
                    <fullName>AP002 - TOMOKO AIHARA</fullName>
                </value>
                <value>
                    <fullName>AP003 - NAOKI KURIMOTO</fullName>
                </value>
                <value>
                    <fullName>AP004 - Anca Lin</fullName>
                </value>
                <value>
                    <fullName>CN214 - Mary Ng</fullName>
                </value>
                <value>
                    <fullName>CN215 - Jerry Zhao</fullName>
                </value>
                <value>
                    <fullName>CN216 - Anna Liu</fullName>
                </value>
                <value>
                    <fullName>CN217 - Lisa Liu</fullName>
                </value>
                <value>
                    <fullName>CN218 - Ruimin Zhu</fullName>
                </value>
                <value>
                    <fullName>CN219 - Tina Xu</fullName>
                </value>
                <value>
                    <fullName>CN220 - Diya Wu</fullName>
                </value>
                <value>
                    <fullName>CN221 - Echo Ma</fullName>
                </value>
                <value>
                    <fullName>CN222 - Andy Ng</fullName>
                </value>
                <value>
                    <fullName>CN223 - Yuffy Zhu</fullName>
                </value>
                <value>
                    <fullName>CN224 - Lina Hou</fullName>
                </value>
                <value>
                    <fullName>CN225 - Yuna Zhang</fullName>
                </value>
                <value>
                    <fullName>CN226 - Amy Xie</fullName>
                </value>
                <value>
                    <fullName>CN227 - Cherish Zhao</fullName>
                </value>
                <value>
                    <fullName>CN228 - Jane Jia</fullName>
                </value>
                <value>
                    <fullName>CN248 - Calla Chi</fullName>
                </value>
                <value>
                    <fullName>CN249 - Gilbert Chen</fullName>
                </value>
                <value>
                    <fullName>CN250 - Johnny Yu</fullName>
                </value>
                <value>
                    <fullName>CN251 - Queenie Xiao</fullName>
                </value>
                <value>
                    <fullName>CN252 - Sue Xue</fullName>
                </value>
                <value>
                    <fullName>CN253 - Ting Tracy Li</fullName>
                </value>
                <value>
                    <fullName>CN254 - Van Zhang</fullName>
                </value>
                <value>
                    <fullName>CN255 - Eva Zhu</fullName>
                </value>
                <value>
                    <fullName>CN256 - Vicky Shen</fullName>
                </value>
                <value>
                    <fullName>CN258 - Jenny Piao</fullName>
                </value>
                <value>
                    <fullName>CN259 - Rita Guo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Customer__c</fullName>
        <description>The SAP Customer</description>
        <inlineHelpText>The SAP Customer</inlineHelpText>
        <label>SAP Customer</label>
        <referenceTo>SAP_CMD__c</referenceTo>
        <relationshipLabel>Partner Functions</relationshipLabel>
        <relationshipName>Customer_Partner_Functions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Partner Function</label>
    <listViews>
        <fullName>ZAZS</fullName>
        <columns>NAME</columns>
        <columns>SAP_Customer__c</columns>
        <columns>Partner_Function_Type__c</columns>
        <columns>Person_Name__c</columns>
        <columns>FunLoc__c</columns>
        <columns>FunLoc_Number__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partner_Function__c.ZA_ZS</value>
        </filters>
        <label>ZA / ZS</label>
    </listViews>
    <nameField>
        <displayFormat>PF-{00000000}</displayFormat>
        <label>Partner Function ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Functions</pluralLabel>
    <recordTypes>
        <fullName>RE_RG_WE_AG_ZC_ZD_ZI</fullName>
        <active>true</active>
        <description>BillTo Party / Payer /  ShipTo Party /  SoldTo Party / CSW: SP of end-customer / CSW: SH of end-customer</description>
        <label>RE / RG / WE / AG / ZC / ZD / ZI</label>
    </recordTypes>
    <recordTypes>
        <fullName>ZA_ZS</fullName>
        <active>true</active>
        <description>Customer Service Rep / Sales Person</description>
        <label>ZA / ZS</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>